# cuda-fluid-sim

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
framework/cmake/: CompilerWarnings.cmake
framework/include/framework/: image.h  mesh.h  window.h
framework/src/: image.cpp  mesh.cpp  window.cpp
shaders/: billboard.frag  billboard.vert  hdr.frag
src/: CMakeLists.txt  README.md  main.cu
src/device/: field_edit.cu  field_edit.cuh  field_manager.cu  field_manager.cuh  fluid_sim.cu  fluid_sim.cuh  gl_interop.cu  gl_interop.cuh  sources.cu  sources.cuh  utils.cuh
src/render/: config.cpp  config.h  field_renderer.cpp  field_renderer.h  renderer.cpp  renderer.h  texture.cpp  texture.h
src/ui/: callbacks.hpp  debug_callbacks.hpp  menu.cpp  menu.h
src/utils/: constants.h  cuda_utils.cu  cuda_utils.cuh  misc_utils.hpp  render_utils.hpp
